[tool.poetry]
authors = ["Philip Delorenzo <git@deloarts.com>"]
classifiers = ["Operating System :: Microsoft :: Windows"]
description = "Helper functions and widgets for all pytia ui apps."
name = "pytia-ui-tools"
readme = "README.md"
version = "0.6.6"

[tool.poetry.dependencies]
Jinja2 = "3.1.2"
Pillow = "10.0.0"
PyYAML = "6.0.1"
pyscreenshot = "3.0"
python = "^3.10"
pywin32 = "306"
qrcode = "7.4.2"
ttkbootstrap = "1.10.1"

[tool.poetry.group.dev.dependencies]
black = "22.10.0"
pdoc3 = "^0.10.0"
pre-commit = "^2.19.0"
pylint = "^2.13.9"
pytest = "^7.1.1"
validators = "^0.19.0"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["setuptools", "poetry-core>=1.0.0"]
