[tool.poetry]
authors = ["Philip Delorenzo <git@deloarts.com>"]
classifiers = ["Operating System :: Microsoft :: Windows"]
description = "Helper functions and widgets for all pytia ui apps."
name = "pytia-ui-tools"
readme = "README.md"
version = "0.7.3"

[tool.poetry.dependencies]
Jinja2 = "3.1.3"
PyYAML = "6.0.1"
python = "^3.10"
pywin32 = "306"
qrcode = "7.4.2"
ttkbootstrap = "1.10.1"

[tool.poetry.group.dev.dependencies]
black = "23.3.0"
pdoc3 = "^0.10.0"
pre-commit = "^3.5.0"
pylint = "^3.0.0"
pytest = "^7.4.0"
validators = "^0.22.0"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["setuptools", "poetry-core>=1.0.0"]
