[tool.poetry]
authors = ["Philip Delorenzo <git@deloarts.com>"]
classifiers = ["Operating System :: Microsoft :: Windows"]
description = "Helper functions and widgets for all pytia ui apps."
name = "pytia-ui-tools"
readme = "README.md"
version = "0.7.5"

[tool.poetry.dependencies]
Jinja2 = "3.1.4"
PyYAML = "6.0.2"
python = "^3.13"
pywin32 = "308"
qrcode = "7.4.2"
ttkbootstrap = "1.10.1"

[tool.poetry.group.dev.dependencies]
black = "24.8.0"
pdoc3 = "^0.11.3"
pre-commit = "^4.0.1"
pylint = "^3.3.1"
pytest = "^8.3.3"
validators = "^0.34.0"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["setuptools", "poetry-core>=1.0.0"]
